; ModuleID = '/home/carl/AnghaBench/lab/python/extr_dmlab_module.c_Lab_is_running.c'
source_filename = "/home/carl/AnghaBench/lab/python/extr_dmlab_module.c_Lab_is_running.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Py_RETURN_TRUE = common dso_local global i32 0, align 4
@Py_RETURN_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @Lab_is_running to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @Lab_is_running(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i64 @is_running(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @Py_RETURN_TRUE, align 4
  br label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @Py_RETURN_FALSE, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i32*, i32** %3, align 8
  ret i32* %14
}

declare dso_local i64 @is_running(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
